# project-reporter

./: .env.example  .gitignore  CLAUDE.md  INITIAL.md  cli.py  netlify.toml  pyproject.toml  requirements.txt
config/: discord.yaml  projects.yaml
docs/: design-decisions.md
hub/: mkdocs.yml
hub/docs/: index.md
ingestion/: metadata.py  pipeline.py
ingestion/extractors/: __init__.py  api_routes.py  base.py  code_structure.py  config_files.py  db_schema.py  dependencies.py  file_tree.py
ingestion/generators/: claude_writer.py  mkdocs_writer.py  prompts.py
ingestion/templates/: hub_card.j2  mkdocs_yml.j2
notifications/: card_store.py  claude_responder.py  content_generator.py  discord_bot.py
projects/project-reporter/: mkdocs.yml
projects/project-reporter/docs/: index.md
projects/project-reporter/docs/architecture/: index.md
projects/project-reporter/docs/btp-insights/: index.md
projects/project-reporter/docs/business-queries/: index.md
projects/project-reporter/docs/data-model/: index.md
projects/project-reporter/docs/deployment/: index.md
projects/talent-management/: mkdocs.yml
projects/talent-management/docs/: index.md
projects/talent-management/docs/architecture/: component-inventory.md  index.md
projects/talent-management/docs/business-queries/: index.md
projects/talent-management/docs/dashboards/: hr-analytics.md  mcp-audit.md  sapui5-enterprise.md
projects/talent-management/docs/data-generation/: attrition-model.md  index.md
scripts/: bot_scheduler.sh  build_all.py  build_embeddings.py
(+8 files in other folders)
